@@ -1,18 +1,15 @@
 <h1 class="text-center">Dota Heroes</h1>
-<!-- <p class="text-center">
-  <a href="/pokemon">Favorites</a>
-</p> -->
 
 <div class="container"> 
 
   <div class="row justify-content-md-center">
 
     <div class="col" id="comp">
-      <p class="compCell"> 1</p>
-      <p class="compCell"> 2</p>  
-      <p class="compCell"> 3</p> 
-      <p class="compCell"> 4</p> 
-      <p class="compCell"> 5</p>
+      <p class="compCell" cellId="1"> 1</p>
+      <p class="compCell" cellId="2"> 2</p>  
+      <p class="compCell" cellId="3"> 3</p> 
+      <p class="compCell" cellId="4"> 4</p> 
+      <p class="compCell" cellId="5"> 5</p>
     </div>
     
     
@@ -37,18 +34,10 @@
 
 <script>
 
-// function cellClick(clickedCellEvent) {
-//    console.log("🚀");
-//    console.log(clickedCellEvent)
-//     // const clickedCell = clickedCellEvent.target;
-//     // const clickedCellIndex = parseInt(clickedCell.getAttribute('compCell'));
-
-//     // console.log(clickedCell)
-// }
-
-// document.querySelectorAll('.compCell').forEach(cell => cell.addEventListener('click', cellClick));
-
+let compSetup = ['','','','',''];
 document.addEventListener('click', event => {
-  console.log(event)
+  
+  console.log(event) // <--- how to define dotaData.hero_id
 })
+
 </script>
