@@ -1,0 +1,11 @@
+<h2 class="text-center">Saved Comps</h2>
+<p class="text-center">
+  <a href="/">home</a>
+</p>
+<div class='container'>
+  <% teams.forEach(teams => { %>
+      <div class=" well">
+          <h2><%= teams.name %></h2>
+      </div>
+    <% }) %> 
+</div>
